--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Electrolize&display=swap');
 * {
+  font-family: "Electrolize", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body {
-  font-family: Arial, sans-serif;
+h2 {
+  text-align: center;
+  font-size: 2.5em;
 }
 
 .navbar {
@@ -30,6 +33,8 @@ body {
 
 .nav-links a {
   text-decoration: none;
+  font-weight: bold;
+  font-size: 1.4rem;
   color: white;
   padding: 5px 10px;
   transition: background 0.3s ease;
@@ -40,33 +45,25 @@ body {
   border-radius: 4px;
 }
 
-.mobile-menu-toggle {
-  display: none;
-  flex-direction: column;
-  gap: 5px;
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-
-.mobile-menu-toggle .bar {
-  width: 25px;
-  height: 3px;
-  background-color: white;
+header {
+  position: sticky; 
+  top: 0;
+  z-index: 1000; 
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); 
 }
 
 .hero {
   position: relative;
+  justify-content: center;
   width: 100%;
   height: 100vh;
-  overflow: hidden;
 }
 
 .hero-image {
+  opacity: 0.8;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  filter: blur(3px) opacity(0.8);
 }
 
 .hero-text {
@@ -84,22 +81,79 @@ body {
 }
 
 .hero-text p {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
 }
 
+.content-section{
+  margin: 100px 0;
+  padding: 20px 0;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; 
+  align-items: flex-start; 
+  background-color: #fff;
+  margin: 0 auto; 
+  padding: 10px; 
+  max-width: 1300px; 
+}
+
+.flex-item {
+  padding: 1%;
+  flex-grow: 1;
+  flex-basis: calc(33.33% - 20px); 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px; 
+  border: 1px solid #c5c5c5;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  background-color: #f9f9f9; 
+}
+
+.flex-info {
+  padding: 10px;
+  text-align: center;
+}
+
+.flex-info h4 {
+  margin: 10px 0;
+  font-size: 1.2rem;
+  color: #333;
+}
+
+.flex-info p {
+  font-size: 1rem;
+  color: #666;
+}
+
+.flex-img img {
+  max-width: 100%;
+}
+
+.flex-info {
+  margin-top: auto;
+}
 
 .split-container {
   display: flex;
-  width: 100%;
-  background-color: #fff;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  margin: 0 auto;
+  padding: 10px;
+  max-width: 1200px;
 }
 
 .split {
+  font-size: 1.1em;
   padding: 2%;
   flex-grow: 1;
   flex-basis: 21%;
-  justify-content: center;
   display: flex;
   flex-direction: column;
 }
@@ -115,6 +169,10 @@ body {
   flex-direction: row-reverse;
 }
 
+.split-container .split h4 {
+  text-align: center;
+}
+
 .button {
   display: inline-block;
   width: 35%;
@@ -127,6 +185,33 @@ body {
   font-weight: bold;
 }
 
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+}
+
+input[type="email"] {
+  width: 500px; 
+  padding: 20px; 
+  border: 1px solid darkblue; 
+  border-radius: 15px; 
+  margin-bottom: 15px; 
+}
+
+button {
+  padding: 10px 20px; 
+  background-color: #0c8cdb;
+  color: #fff;
+  border: none; 
+  border-radius: 5px;
+  cursor: pointer; 
+}
+
+button:hover {
+  background-color: #005f9b; 
+}
+
 footer {
   background-color: #333;
   padding: 20px 0;
@@ -136,9 +221,11 @@ footer {
   position: relative;
 }
 
-.footer-content {
-  text-align: center;
-  color: white;
+.split-container .split-img img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 8px;
 }
 
 .social-icons {
@@ -152,6 +239,12 @@ footer {
   height: auto;
 }
 
+
+.footer-content {
+  text-align: center;
+  color: white;
+}
+
 .footer-links a {
   text-decoration: none;
   color: white;
@@ -163,6 +256,13 @@ footer {
 @media (max-width: 768px) {
   .hero-text h1 {
     font-size: 2rem;
+  }
+
+  .flex-item {
+    padding: 1%; 
+    flex-basis: 80%;
+    flex-grow: 1; 
+    flex-grow: inherit;
   }
 
   .hero-text p {
