--- a/css/style.css
+++ b/css/style.css
@@ -85,8 +85,9 @@ header {
 }
 
 .content-section{
-  margin: 100px 0;
+  margin: 10px;
   padding: 20px 0;
+  text-align: center;
 }
 
 .container {
@@ -110,7 +111,7 @@ header {
   margin: 10px; 
   border: 1px solid #c5c5c5;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
+  border-radius: 10px;
   background-color: #f9f9f9; 
 }
 
@@ -125,17 +126,10 @@ header {
   color: #333;
 }
 
-.flex-info p {
-  font-size: 1rem;
-  color: #666;
-}
-
 .flex-img img {
   max-width: 100%;
-}
-
-.flex-info {
-  margin-top: auto;
+  object-fit: contain;
+  height: auto;
 }
 
 .split-container {
@@ -254,21 +248,12 @@ footer {
 
 /* Responsive Design */
 @media (max-width: 768px) {
-  .hero-text h1 {
-    font-size: 2rem;
-  }
-
   .flex-item {
     padding: 1%; 
     flex-basis: 80%;
     flex-grow: 1; 
     flex-grow: inherit;
   }
-
-  .hero-text p {
-    font-size: 1rem;
-  }
-
   .split {
     padding: 2%;
     flex-basis: 95%;
@@ -278,23 +263,5 @@ footer {
     flex-direction: column;
     align-items: center;
     text-align: center; 
-  }
-
-  .split-container {
-    justify-content: center;
-  }
-
-  .footer-content {
-    padding: 10px;
-  }
-
-  .social-icons {
-    display: flex;
-    justify-content: space-evenly;
-    margin: 10px 0;
-  }
-
-  .social-icons img {
-    width: 40px;
   }
 }
