--- a/css/style.css
+++ b/css/style.css
@@ -119,9 +119,10 @@ nav {
   justify-content: center;
   align-items: flex-start;
   background-color: #fff;
-  margin-top: 1.5em;
+  margin: 1.5em auto; 
   padding: 10px;
   max-width: 1300px;
+  width: 100%; 
 }
 
 .game-module-card {
